Removed SfListView reference.

--- a/TraceIt/Views/SubjectsPage.xaml
+++ b/TraceIt/Views/SubjectsPage.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:gradient="clr-namespace:Syncfusion.XForms.Graphics;assembly=Syncfusion.Core.XForms" 
-             xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms" 
+             xmlns:gradient="clr-namespace:Syncfusion.XForms.Graphics;assembly=Syncfusion.Core.XForms"
              xmlns:border="clr-namespace:Syncfusion.XForms.Border;assembly=Syncfusion.Core.XForms" 
              xmlns:Button="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
              mc:Ignorable="d"
@@ -32,7 +31,7 @@
             <!--#region GradientBackground -->
             <gradient:SfGradientView AbsoluteLayout.LayoutFlags="All"
                                      AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
-                                     Style="{StaticResource backgroundGradient}">
+                                     Style="{DynamicResource backgroundGradient}">
             </gradient:SfGradientView>
             <!--#endregion-->
 
@@ -51,7 +50,7 @@
 
                                     <gradient:SfGradientView AbsoluteLayout.LayoutFlags="All"
                                                              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
-                                                             Style="{StaticResource subjectItemGradient}"/>
+                                                             Style="{DynamicResource subjectItemGradient}"/>
 
                                     <Label Text="{Binding Name}"
                                            AbsoluteLayout.LayoutFlags="All"
@@ -72,7 +71,7 @@
                                                      FontSize="17"
                                                      AbsoluteLayout.LayoutFlags="All"
                                                      AbsoluteLayout.LayoutBounds="0.5, 0.85, 0.7, 0.2"
-                                                     Style="{StaticResource subjectButtonGradient}"/>
+                                                     Style="{DynamicResource subjectButtonGradient}"/>
 
                                 </AbsoluteLayout>
                             </border:SfBorder>
