--- a/TraceIt/Views/StandardSelectionPage.xaml
+++ b/TraceIt/Views/StandardSelectionPage.xaml
@@ -2,16 +2,60 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:gradient="clr-namespace:Syncfusion.XForms.Graphics;assembly=Syncfusion.Core.XForms" 
+             xmlns:border="clr-namespace:Syncfusion.XForms.Border;assembly=Syncfusion.Core.XForms" 
+             xmlns:Button="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
              mc:Ignorable="d"
              x:Class="TraceIt.Views.StandardSelectionPage">
     
     <ContentPage.Content>
         <AbsoluteLayout>
+            
+            <gradient:SfGradientView Style="{DynamicResource backgroundGradient}"/>
 
-            <CollectionView>
+            <StackLayout Padding="14, 14, 14, 0" AbsoluteLayout.LayoutFlags="All"
+                         AbsoluteLayout.LayoutBounds="0.5, 0, 1, 1">
+                
+                <CollectionView x:Name="selectedStandardsCollectionView">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <border:SfBorder Style="{DynamicResource listItemBorder}">
+                                <AbsoluteLayout HeightRequest="90">
 
-            </CollectionView>
+                                    <gradient:SfGradientView AbsoluteLayout.LayoutFlags="All"
+                                                             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                                                             Style="{DynamicResource subjectItemGradient}"/>
+
+                                    <Label Text="{Binding Name}"
+                                           AbsoluteLayout.LayoutFlags="All"
+                                           AbsoluteLayout.LayoutBounds="0.5, 0.1, 0.9, 0.2"
+                                           FontAttributes="Bold"/>
+
+                                    <Label Text="{Binding Credits, StringFormat='0 / {0} credits'}"
+                                           AbsoluteLayout.LayoutFlags="All"
+                                           AbsoluteLayout.LayoutBounds="0.5, 0.35, 0.9, 0.2"/>
+
+                                    <Label Text="{Binding Standards, StringFormat='{0} standards'}"
+                                           AbsoluteLayout.LayoutFlags="All"
+                                           AbsoluteLayout.LayoutBounds="0.5, 0.53, 0.9, 0.2"/>
+
+                                    <Button:SfButton Text="View Info" CornerRadius="30"
+                                                     TextColor="Black"
+                                                     FontAttributes="Bold"
+                                                     FontSize="17"
+                                                     AbsoluteLayout.LayoutFlags="All"
+                                                     AbsoluteLayout.LayoutBounds="0.5, 0.85, 0.7, 0.2"
+                                                     Style="{DynamicResource subjectButtonGradient}"/>
+
+                                </AbsoluteLayout>
+                            </border:SfBorder>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+                
+            </StackLayout>
+            
 
         </AbsoluteLayout>
     </ContentPage.Content>
