Removed anything related to the IsVisible conversion, removed Add Subject button from the ItemTemplate.

--- a/TraceIt/Views/SubjectsPage.xaml
+++ b/TraceIt/Views/SubjectsPage.xaml
@@ -79,15 +79,17 @@
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
 
-                    <CollectionView.Footer>
-                        <border:SfBorder Style="{DynamicResource listItemBorder}"
-                                         BackgroundColor="Black"
-                                         HeightRequest="180">
-                            <Button Text="Add Subject"
-                                    TextColor="Yellow"
-                                    BackgroundColor="Transparent"/>
-                        </border:SfBorder>
-                    </CollectionView.Footer>
+                    <CollectionView.FooterTemplate>
+                        <DataTemplate>
+                            <border:SfBorder Style="{DynamicResource listItemBorder}"
+                                                     BackgroundColor="Black"
+                                                     HeightRequest="180">
+                                <Button Text="Add Subject"
+                                                TextColor="Yellow"
+                                                BackgroundColor="Transparent"/>
+                            </border:SfBorder>
+                        </DataTemplate>
+                    </CollectionView.FooterTemplate>
 
                 </CollectionView>
             </StackLayout>
