Changed TabbedPage to custom GradientTabbedPage.

--- a/TraceIt/Views/TabbedPageHome.xaml
+++ b/TraceIt/Views/TabbedPageHome.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+<controls:GradientTabbedPage  
+             xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+             xmlns:controls="clr-namespace:TraceIt.Controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:local="clr-namespace:TraceIt.Views"
              mc:Ignorable="d"
@@ -10,14 +12,10 @@
              xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
              android:TabbedPage.ToolbarPlacement="Bottom">
 
-    <NavigationPage Title="Subjects">
-        <x:Arguments>
-            <local:SubjectsPage/>
-        </x:Arguments>
-    </NavigationPage>
     
+
     <ContentPage Title="Page 2"/>
     <ContentPage Title="Page 3"/>
 
 
-</TabbedPage>
+</controls:GradientTabbedPage>
