--- a/TraceIt/Views/SelectedStandardsPage.xaml
+++ b/TraceIt/Views/SelectedStandardsPage.xaml
@@ -23,10 +23,12 @@
     <ContentPage.Content>
         <AbsoluteLayout>
             
-            <gradient:SfGradientView Style="{DynamicResource backgroundGradient}"/>
+            <gradient:SfGradientView Style="{DynamicResource backgroundGradient}"
+                                     AbsoluteLayout.LayoutFlags="All"
+                                     AbsoluteLayout.LayoutBounds="0, 0, 1, 1"/>
 
             <StackLayout Padding="14, 14, 14, 14" AbsoluteLayout.LayoutFlags="All"
-                         AbsoluteLayout.LayoutBounds="0.5, 0, 1, 1">
+                         AbsoluteLayout.LayoutBounds="0, 0, 1, 1">
                 
                 <CollectionView x:Name="selectedStandardsCollectionView">
                     <CollectionView.ItemsLayout>
