--- a/TraceIt/Views/SelectedStandardsPage.xaml
+++ b/TraceIt/Views/SelectedStandardsPage.xaml
@@ -66,6 +66,7 @@
                                                      BorderColor="Transparent"
                                                      AbsoluteLayout.LayoutFlags="All"
                                                      AbsoluteLayout.LayoutBounds="0.95, 0.85, 0.3, 0.3"
+                                                     Clicked="buttonViewMore_Clicked"
                                                      Style="{DynamicResource subjectButtonGradient}"/>
 
                                 </AbsoluteLayout>
