--- a/TraceIt/Views/SelectedStandardsPage.xaml
+++ b/TraceIt/Views/SelectedStandardsPage.xaml
@@ -9,6 +9,10 @@
              mc:Ignorable="d"
              x:Class="TraceIt.Views.StandardSelectionPage"
              Title="Smart English">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add" Clicked="buttonAdd_Clicked"/>
+    </ContentPage.ToolbarItems>
     
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -43,7 +47,7 @@
                                                              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                                                              Style="{DynamicResource subjectItemGradient}"/>
 
-                                    <Label Text="{Binding Sub_Reference}"
+                                    <Label Text="{Binding Subject_Reference}"
                                            HorizontalTextAlignment="Start"
                                            AbsoluteLayout.LayoutFlags="All"
                                            AbsoluteLayout.LayoutBounds="0.5, 0.1, 0.9, 0.2"
@@ -81,7 +85,8 @@
                             <Button Text="Add Standard"
                                     FontSize="22"
                                     TextColor="Yellow"
-                                    BackgroundColor="Transparent"/>
+                                    BackgroundColor="Transparent"
+                                    Clicked="buttonAdd_Clicked"/>
                         </border:SfBorder>
                     </CollectionView.Footer>
                     
